# sync-skills

./: .gitignore  README.en.md  README.ja.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
doc/: PRD.md  design-discussion.md  map.md  phase-3.md  skill-manager-ddl.sql  tool-discovery-plan.md
docs/: testing-issues-triage.md
plan/: findings.md  progress.md  task_plan.md
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  diff.rs  discovery.rs  hash.rs  lib.rs  lock.rs  main.rs  models.rs  scanner.rs  settings.rs  sync.rs
